--- a/style.css
+++ b/style.css
@@ -56,16 +56,25 @@ section {
     background: url("images/developer-portfolio/dream-bg.png") no-repeat;
     background-position: right;
 }
-
-.single-experience{
-    box-shadow: 10px 10px 40px gray;
-    height: 80%;
-    background-color: #fff;
-}
 .experience-area{
     background: url("images/developer-portfolio/exp-bg.png") no-repeat;
     background-position: left;
+    padding-top: -20px;
 }
+.experience-area h2{
+    font-size: 30px;
+}
+.experience-area-heading{
+    font-size: 30px;
+    padding-left: 10px;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    height: 70%;
+    background-color: #fff;
+}
+
+
 #full-stack{
     border-left: 7px solid;
     border-image: linear-gradient(180deg, #da3997, #f08d0b);
